Recover assistant from history (#571)

--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -48,6 +48,7 @@
   "assistant-details": "Dettagli assistente",
   "assistant-duplicated": "Assistente duplicato con successo",
   "assistant-owner-updated": "Proprietario dell'assistente modificato con successo",
+  "assistant_restored": "Assistente ripristinato con successo",
   "assistant-successfully-created": "Assistente creato con successo",
   "assistant-successfully-published": "Assistente pubblicato con successo",
   "assistant-successfully-updated": "Assistente modificato con successo",
@@ -262,7 +263,7 @@
   "no_such_user": "Utente non trovato",
   "no-active-workspace": "Non hai alcun workspace attivo.",
   "no-api-key-description": "Le chiavi API consentono alla tua app di comunicare con l'app",
-  "no-credentials": "Credenziali non trovate.",
+  "no_files_uploaded": "Nessun file uploadato",
   "no_filter": "Non filtrare",
   "none": "Nessuno",
   "ok": "Ok",
@@ -271,6 +272,7 @@
   "only_you_will_have_access_to_this_assistant": "Solo tu avrai accesso a questo assistente",
   "only_you_will_have_access_to_this_tool": "Solo tu potrai aggiungere questo tool ad un assistente",
   "openapi_spec": "Specifica OpenAPI",
+  "options": "Opzioni",
   "or-sign-in-with": "Oppure Accedi Con",
   "order_by_name": "Ordina per nome",
   "order_by_last_usage": "Ordina per ultimo utilizzo",
@@ -318,6 +320,7 @@
   "remove": "Rimuovi",
   "rename": "Rinomina",
   "reset-password": "Reimposta Password",
+  "restore_this_version": "Ripristina questa versione",
   "result": "Risultato",
   "revoke-api-key-confirm": "Sei sicuro di voler revocare questa API key? Questa azione non può essere annullata.",
   "revoke-api-key": "Revoca API key",
@@ -413,6 +416,7 @@
   "user": "Utente",
   "user-deleted": "Utente eliminato con successo",
   "users": "Utenti",
+  "version_chronology": "Cronologia Versione",
   "welcome_to_logicle": "Benvenuto in logicle",
   "workspace-connections": "Connessioni SSO del Workspace",
   "workspace-created": "Workspace creato con successo.",
