--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -48,6 +48,7 @@
   "assistant-details": "Assistant details",
   "assistant-duplicated": "Assistant successfully duplicated",
   "assistant-owner-updated": "The assistant owner has been successfully updated",
+  "assistant_restored": "Assistant successfully restored",
   "assistant-successfully-created": "Assistant has been successfully created",
   "assistant-successfully-published": "Assistant has been successfully published",
   "assistant-successfully-updated": "Assistant has been successfully updated",
@@ -263,6 +264,7 @@
   "no-active-workspace": "You do not have any active workspace.",
   "no-api-key-description": "API keys allow your app to communicate with app",
   "no-credentials": "No credentials found.",
+  "no_files_uploaded": "No files uploaded",
   "no_filter": "No filter",
   "none": "None",
   "ok": "Ok",
@@ -272,6 +274,7 @@
   "only_you_will_have_access_to_this_tool": "Only you will be able to add this tool to an assistant",
   "openai_backend": "OpenAI",
   "openapi_spec": "OpenAPI spec",
+  "options": "Options",
   "or-sign-in-with": "Or Sign In With",
   "order_by_name": "Order by name",
   "order_by_last_usage": "Order by last usage",
@@ -320,6 +323,7 @@
   "rename": "Rename",
   "reset-password": "Reset Password",
   "resend_this_message": "Resend this message",
+  "restore_this_version": "Restore this version",
   "result": "Result",
   "revoke-api-key-confirm": "Are you sure you want to revoke this API key? This action can not be undone.",
   "revoke-api-key": "Revoke API key",
@@ -415,6 +419,7 @@
   "user": "User",
   "user-deleted": "User successfully deleted",
   "users": "Users",
+  "version_chronology": "Version chronology",
   "welcome_to_logicle": "Welcome to Logicle",
   "workspace-connections": "Workspace SSO Connections",
   "workspace-created": "Workspace created successfully.",
