--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -297,6 +297,7 @@
   "provision": "Provisiona e de-provisiona utenti con il tuo provider di directory.",
   "public_display_name": "Il nome del backend",
   "publish": "Pubblica",
+  "reasoning": "Ragionamento",
   "reasoning_effort": "Livello di ragionamento",
   "recover": "Recupera",
   "redirect-url": "URL di reindirizzamento",
