--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -224,6 +224,7 @@
   "knowledge": "Knowledge",
   "language": "Language",
   "last_upd": "Last\u00A0upd.",
+  "latest": "Latest",
   "legal-disclaimer": "Logicle Chat can make mistakes. Consider checking important information.",
   "link_created": "Link created",
   "links_updated": "Links updated",
@@ -260,6 +261,7 @@
   "new-photo": "Select New Photo",
   "new-workspace": "New Workspace",
   "next_message": "Next message",
+  "obsolete": "Obsolete",
   "no_such_user": "No such user",
   "no-active-workspace": "You do not have any active workspace.",
   "no-api-key-description": "API keys allow your app to communicate with app",
