--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -224,6 +224,7 @@
   "knowledge": "Conoscenza",
   "language": "Lingua",
   "last_upd": "Ultimo\u00A0agg.",
+  "latest": "Più recenti",
   "legal-disclaimer": "Logicle Chat può commettere errori. Verifica le informazioni importanti.",
   "link_created": "Link creato",
   "links_updated": "Links aggiornati",
@@ -266,6 +267,7 @@
   "no_files_uploaded": "Nessun file uploadato",
   "no_filter": "Non filtrare",
   "none": "Nessuno",
+  "obsolete": "Obsolete",
   "ok": "Ok",
   "older": "Più vecchi",
   "only-me": "Solo io",
