Moved token limit and temperature to an advanced tab

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -13,6 +13,7 @@
   "add-user": "Add user",
   "admin": "Admin",
   "administrator-settings": "Administrator settings",
+  "advanced": "Advanced",
   "advanced_message_editor": "Advanced message editor",
   "advanced_system_prompt_editor": "Advanced system prompt editor",
   "all-assistants": "Assistants",
