--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -15,6 +15,7 @@
   "advanced_system_prompt_editor": "Editor system prompt avanzato",
   "admin": "Amministratore",
   "administrator-settings": "Impostazioni Amministratore",
+  "advanced": "Avanzate",
   "all-assistants": "Assistenti",
   "all-backends": "Backends",
   "all-products": "Tutti i Prodotti",
