--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -342,6 +342,7 @@
   "scroll_to_end_of_conversation": "Scroll to end of conversation",
   "search": "Search",
   "search_placeholder": "Search...",
+  "search_workspaces...": "Search workspaces...",
   "select_assistant_owner": "Select the assistant owner...",
   "select_assistant": "Choose an assistant",
   "select_language": "Select your language",
