--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -339,6 +339,7 @@
   "scroll_to_end_of_conversation": "Scroll fino alla fine della conversazione",
   "search": "Cerca",
   "search_placeholder": "Cerca...",
+  "search_workspaces...": "Cerca workspace...",
   "select_assistant_owner": "Seleziona il proprietario dell'assistente...",
   "select_assistant": "Scegli un assistente",
   "select_language": "Seleziona una lingua",
