--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -57,6 +57,7 @@
   "audit-logs": "Audit Logs",
   "auth-methods": "Authentication methods",
   "auth-token": "Auth Token",
+  "authentication": "Authentication",
   "automatic": "Automatic",
   "back": "Back",
   "backend-deleted": "Backend successfully deleted",
@@ -64,6 +65,7 @@
   "backend-successfully-updated": "Backend has been successfully updated",
   "backend": "Backend",
   "backends": "Backends",
+  "bearer_token": "Bearer token",
   "buy-now": "Buy now",
   "cancel": "Cancel",
   "cant_create_assistant_if_no_backend": "Can't create an assistant if no backend is defined",
@@ -263,6 +265,7 @@
   "new-workspace": "New Workspace",
   "next_message": "Next message",
   "obsolete": "Obsolete",
+  "not_authenticated": "Not authenticated",
   "no_such_user": "No such user",
   "no-active-workspace": "You do not have any active workspace.",
   "no-api-key-description": "API keys allow your app to communicate with app",
