--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -57,6 +57,7 @@
   "audit-logs": "Registri di Audit",
   "auth-methods": "Metodi di autenticazione",
   "auth-token": "Token di Autenticazione",
+  "authentication": "Autenticazione",
   "automatic": "Automatico",
   "back": "Indietro",
   "backend-deleted": "Backend eliminato con successo",
@@ -64,6 +65,7 @@
   "backend-successfully-updated": "Backend modificato con successo",
   "backend": "Backend",
   "backends": "Backends",
+  "bearer_token": "Bearer token",
   "buy-now": "Acquista ora",
   "cancel": "Annulla",
   "cant_create_assistant_if_no_backend": "Non è possibile creare un assistente se non è definito un backend",
@@ -269,6 +271,7 @@
   "no_files_uploaded": "Nessun file uploadato",
   "no_filter": "Non filtrare",
   "none": "Nessuno",
+  "not_authenticated": "Non autenticato",
   "obsolete": "Obsolete",
   "ok": "Ok",
   "older": "Più vecchi",
