Limit upload size

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -54,6 +54,7 @@
   "assistant-successfully-published": "Assistant has been successfully published",
   "assistant-successfully-updated": "Assistant has been successfully updated",
   "assistants": "Assistants",
+  "attachment_is_too_big": "Attached file exceeds system limits",
   "audit-logs": "Audit Logs",
   "auth-methods": "Authentication methods",
   "auth-token": "Auth Token",
@@ -420,6 +421,7 @@
   "type": "Type",
   "unknown-error": "Unknown Error",
   "unpublished_edits": "Unpublished edits",
+  "unsupported_file_format": "Unsupported file format",
   "update-account": "Update Account",
   "update_links": "Update links",
   "update-password": "Update Password",
