--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -26,6 +26,7 @@
   "allow-only-work-email": "Per favore usa la tua email aziendale per creare un account.",
   "allow-workspace": "Consenti ai membri del workspace di accedere utilizzando un Identity Provider.",
   "already-have-an-account": "Hai già un account?",
+  "attachment_is_too_big": "La dimensione del file allegato supera i limiti consentiti",
   "analytics": "Statistiche uso",
   "anthropic_backend": "Anthropic",
   "any_available": "Tutti i disponibili",
@@ -418,6 +419,7 @@
   "type": "Tipo",
   "unknown-error": "Errore sconosciuto",
   "unpublished_edits": "Modifiche non pubblicate",
+  "unsupported_file_format": "Formato di file non supportato",
   "update-account": "Modifica Account",
   "update_links": "Aggiorna link",
   "update-password": "Modifica Password",
