--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -396,6 +396,7 @@
   "table-column-created-at": "Creato il",
   "table-column-description": "Descrizione",
   "table-column-email": "Email",
+  "table-column-id": "Id",
   "table-column-members": "Membri",
   "table-column-model": "Modello",
   "table-column-name": "Nome",
