Completed implementaton of user apikey page

--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -33,7 +33,7 @@
   "api_endpoint_placeholder": "Inserisci il tuo endpoint API",
   "api_key_placeholder": "Inserisci l' API key per accedere alle API LLM",
   "api_key": "API key",
-  "api-keys": "API key",
+  "api_keys": "API key",
   "api_url": "API url",
   "apikey-added": "API key aggiunta con successo",
   "apikey-created": "API key creata",
@@ -110,6 +110,7 @@
   "copy_code": "Copia codice",
   "copy-paste-metadata": "Copia e incolla qui il Metadata XML.",
   "copy_as_text": "Copia come testo",
+  "copy_now_your_api_key_you_wont_be_able_to_see_it_again": "Copia ora la tua API key, non potrai più vederla in seguito",
   "copy_to_clipboard": "Copia",
   "create_assistant_field_name_description": "Il nome che gli utenti vedranno nell'app",
   "create_assistant_field_name_placeholder": "Dai un nome al tuo Assistente",
@@ -141,6 +142,7 @@
   "create-directory-connection": "Crea Connessione Directory",
   "create-directory-message": "Provisiona e de-provisiona automaticamente gli utenti con il tuo provider di directory.",
   "create-directory": "Crea Directory",
+  "create_new_api_key": "Crea una nuova API key",
   "create-new-assistant": "Crea un nuovo assistente",
   "create-oidc-connection": "Crea Connessione OIDC",
   "create-saml-connection": "Crea Connessione SAML",
@@ -153,6 +155,8 @@
   "default_": "Predefinito",
   "default_model": "Modello predefinito",
   "default-redirect-url": "URL di reindirizzamento predefinito",
+  "delete_apikey": "Elimina Api key",
+  "delete_apikey_confirmation": "Sei sicuro di voler eliminare questa API key?",
   "delete-member-warning": "Eliminare un membro comporterà la cancellazione di tutte le attività correlate. Questa azione non può essere annullata.",
   "delete-sso-connection-confirmation": "Sei sicuro di voler eliminare questa connessione SSO? Questa azione non può essere annullata.",
   "delete-sso-connection": "Elimina Connessione SSO",
@@ -396,6 +400,7 @@
   "table-column-created-at": "Creato il",
   "table-column-description": "Descrizione",
   "table-column-email": "Email",
+  "table-column-expiration": "Scadenza",
   "table-column-id": "Id",
   "table-column-members": "Membri",
   "table-column-model": "Modello",
@@ -450,5 +455,6 @@
   "workspaces": "Workspace",
   "yesterday": "Ieri",
   "your-email": "La tua email",
-  "your-name": "Il tuo nome"
+  "your-name": "Il tuo nome",
+  "x_days": "{{count}} giorni"
 }
