--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -32,7 +32,7 @@
   "api_endpoint_placeholder": "Enter your api endpoint",
   "api_key_placeholder": "Enter the API key to access the LLM APIs",
   "api_key": "API key",
-  "api-keys": "API keys",
+  "api_keys": "API keys",
   "api_url": "API url",
   "apikey-added": "API key added successfully",
   "apikey-created": "API key created",
@@ -110,6 +110,7 @@
   "copy_as_text": "Copy as text",
   "copy_code": "Copy code",
   "copy-paste-metadata": "Copy and paste Metadata XML here.",
+  "copy_now_your_api_key_you_wont_be_able_to_see_it_again": "Copy now your API key you won't be able to see it again",
   "copy_to_clipboard": "Copy",
   "create_assistant_field_name_description": "The name users will see in the app",
   "create_assistant_field_name_placeholder": "Name your Assistant",
@@ -126,6 +127,7 @@
   "create_connection": "Create connection",
   "create_link": "Create link",
   "create_new": "Create new",
+  "create_new_api_key": "Create new API key",
   "create_tool_field_name_label": "Name",
   "create_tool_field_name_placeholder": "Display name of this tool...",
   "create_tool_field_description_placeholder": "Short description of this tool...",
@@ -158,6 +160,8 @@
   "delete-sso-connection": "Delete SSO Connection",
   "delete_message": "Delete message",
   "delete": "Delete",
+  "delete_apikey": "Delete Api key",
+  "delete_apikey_confirmation": "Are you sure you want to delete this API key?",
   "description": "Description",
   "details": "Details",
   "directory-connection-created": "Directory connection successfully.",
@@ -398,6 +402,7 @@
   "table-column-created-at": "Created At",
   "table-column-description": "Description",
   "table-column-email": "Email",
+  "table-column-expiration": "Expiration",
   "table-column-id": "Id",
   "table-column-members": "Members",
   "table-column-model": "Model",
@@ -452,5 +457,6 @@
   "workspaces": "Workspaces",
   "yesterday": "Yesterday",
   "your-email": "Your email",
-  "your-name": "Your name"
+  "your-name": "Your name",
+  "x_days": "{{count}} days"
 }
