--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -349,6 +349,7 @@
   "scim-url": "SCIM URL.",
   "scroll_to_end_of_conversation": "Scroll to end of conversation",
   "search": "Search",
+  "search_chats": "Search chats",
   "search_placeholder": "Search...",
   "search_workspaces...": "Search workspaces...",
   "select_assistant_owner": "Select the assistant owner...",
