--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -347,6 +347,7 @@
   "scim-url": "URL SCIM",
   "scroll_to_end_of_conversation": "Scroll fino alla fine della conversazione",
   "search": "Cerca",
+  "search_chats": "Ricerca chat",
   "search_placeholder": "Cerca...",
   "search_workspaces...": "Cerca workspace...",
   "select_assistant_owner": "Seleziona il proprietario dell'assistente...",
