--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -227,6 +227,7 @@
   "insert_openapi_spec_placeholder": "Insert a YAML OpenAPI spec...",
   "instructions": "Instructions",
   "invalid-credentials": "Invalid login credentials",
+  "invalid_email": "Invalid email",
   "invite-create-account": "To continue, you must either create a new account or login to an existing account.",
   "invocation_of_tool": "Invocation of tool",
   "knowledge": "Knowledge",
@@ -417,6 +418,7 @@
   "tags": "Tags",
   "temperature": "Temperature",
   "the_system": "The sistem",
+  "this_field_is_required": "This field is required",
   "today": "Today",
   "togetherai_backend": "Together AI",
   "token-limit": "Token Limit",
@@ -459,5 +461,7 @@
   "yesterday": "Yesterday",
   "your-email": "Your email",
   "your-name": "Your name",
-  "x_days": "{{count}} days"
+  "x_days": "{{count}} days",
+
+  "Invalid input": "Invalid input"
 }
