--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -418,7 +418,6 @@
   "tags": "Tags",
   "temperature": "Temperature",
   "the_system": "The sistem",
-  "this_field_is_required": "This field is required",
   "today": "Today",
   "togetherai_backend": "Together AI",
   "token-limit": "Token Limit",
@@ -463,5 +462,11 @@
   "your-name": "Your name",
   "x_days": "{{count}} days",
 
-  "Invalid input": "Invalid input"
+  "invalid_input": "Invalid input",
+  "invalid_type": "Invalid type",
+  "invalid_value": "Invalid value",
+  "invalid_value_email": "Invalid email",
+  "invalid_format": "Invalid format",
+  "this_field_is_required": "This field is required",
+  "value_is_too_short": "Value is too short"
 }
