--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -228,7 +228,6 @@
   "insert_openapi_spec_placeholder": "Inserisci una specifica YAML OpenAPI...",
   "instructions": "Istruzioni",
   "invalid-credentials": "Credenziali di accesso non valide",
-  "invalid_email": "Indirizzo email non valido",
   "invite-create-account": "Per continuare, devi creare un nuovo account o accedere a un account esistente.",
   "invocation_of_tool": "Invocazione del tool",
   "knowledge": "Conoscenza",
@@ -416,7 +415,6 @@
   "tags": "Etichette",
   "temperature": "Temperatura",
   "the_system": "Il sistema",
-  "this_field_is_required": "Questo campo è obbligatorio",
   "today": "Oggi",
   "togetherai_backend": "Together AI",
   "token-limit": "Limite Token",
@@ -461,5 +459,11 @@
   "your-name": "Il tuo nome",
   "x_days": "{{count}} giorni",
 
-  "Invalid input": "Valore non valido"
+  "invalid_input": "Valore non valido",
+  "invalid_type": "Tipo non valido",
+  "invalid_value": "Valore non valido",
+  "invalid_value_email": "Indirizzo email non valido",
+  "invalid_format": "Formato non valido",
+  "this_field_is_required": "Questo campo è obbligatorio",
+  "value_is_too_short": "Valore troppo corto"
 }
