APIs and page to manage browser sessions

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -162,6 +162,8 @@
   "delete": "Delete",
   "delete_apikey": "Delete Api key",
   "delete_apikey_confirmation": "Are you sure you want to delete this API key?",
+  "delete_session": "Delete session",
+  "delete_session_confirmation": "Are you sure you want to delete this session?",
   "description": "Description",
   "details": "Details",
   "directory-connection-created": "Directory connection successfully.",
@@ -381,6 +383,8 @@
   "sign-up": "Sign up",
   "signature_algorithm": "Signature Algorithm",
   "single-sign-on": "Single Sign On",
+  "sessions": "Sessions",
+  "session-deleted": "Session deleted",
   "sources": "Fonti",
   "sp_acs_url": "ACS (Assertion Consumer Service) URL / Single Sign-On URL / Destination URL",
   "sp_entity_id": "SP Entity ID / Identifier / Audience URI / Audience Restriction",
@@ -401,6 +405,7 @@
   "table-column-apikey": "API key",
   "table-column-backend": "Backend",
   "table-column-created-at": "Created At",
+  "table-column-current": "Current",
   "table-column-description": "Description",
   "table-column-email": "Email",
   "table-column-expiration": "Expiration",
