--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -147,7 +147,7 @@
   "create-oidc-connection": "Crea Connessione OIDC",
   "create-saml-connection": "Crea Connessione SAML",
   "create-workspace": "Crea Workspace",
-  "created-at": "Creato il",
+  "created-at": "Data creazione",
   "credentials": "Credenziali",
   "current-password": "Password Attuale",
   "daily-usage": "Utilizzo Giornaliero",
@@ -402,7 +402,7 @@
   "table-column-apiendpoint": "Endpoint API",
   "table-column-apikey": "API key",
   "table-column-backend": "Backend",
-  "table-column-created-at": "Creato il",
+  "table-column-created-at": "Data creazione",
   "table-column-current": "Corrente",
   "table-column-description": "Descrizione",
   "table-column-email": "Email",
