User session management UI (#714)

--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -147,7 +147,7 @@
   "create-oidc-connection": "Crea Connessione OIDC",
   "create-saml-connection": "Crea Connessione SAML",
   "create-workspace": "Crea Workspace",
-  "created-at": "Creato il",
+  "created-at": "Data creazione",
   "credentials": "Credenziali",
   "current-password": "Password Attuale",
   "daily-usage": "Utilizzo Giornaliero",
@@ -157,6 +157,8 @@
   "default-redirect-url": "URL di reindirizzamento predefinito",
   "delete_apikey": "Elimina Api key",
   "delete_apikey_confirmation": "Sei sicuro di voler eliminare questa API key?",
+  "delete_session": "Elimina sessione",
+  "delete_session_confirmation": "Sei sicuro di voler eliminare questa sessione?",
   "delete-member-warning": "Eliminare un membro comporterà la cancellazione di tutte le attività correlate. Questa azione non può essere annullata.",
   "delete-sso-connection-confirmation": "Sei sicuro di voler eliminare questa connessione SSO? Questa azione non può essere annullata.",
   "delete-sso-connection": "Elimina Connessione SSO",
@@ -379,6 +381,8 @@
   "sign-up": "Registrati",
   "signature_algorithm": "Algoritmo di Firma",
   "single-sign-on": "Single Sign On",
+  "sessions": "Sessioni",
+  "session-deleted": "Sessione eliminata",
   "sources": "Sources",
   "sp_acs_url": "URL ACS (Assertion Consumer Service) / URL Single Sign-On / URL Destinazione",
   "sp_entity_id": "ID Entità SP / Identificativo / URI Pubblico / Restrizione Pubblico",
@@ -398,7 +402,8 @@
   "table-column-apiendpoint": "Endpoint API",
   "table-column-apikey": "API key",
   "table-column-backend": "Backend",
-  "table-column-created-at": "Creato il",
+  "table-column-created-at": "Data creazione",
+  "table-column-current": "Corrente",
   "table-column-description": "Descrizione",
   "table-column-email": "Email",
   "table-column-expiration": "Scadenza",
