Added lastSeenAt / userAgent / ipAddress

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -405,6 +405,9 @@
   "table-column-apikey": "API key",
   "table-column-backend": "Backend",
   "table-column-created-at": "Created At",
+  "table-column-agent": "Agent",
+  "table-column-ip": "IP",
+  "table-column-last-seen": "Last seen",
   "table-column-current": "Current",
   "table-column-description": "Description",
   "table-column-email": "Email",
