--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -403,6 +403,9 @@
   "table-column-apikey": "API key",
   "table-column-backend": "Backend",
   "table-column-created-at": "Data creazione",
+  "table-column-agent": "Agente",
+  "table-column-ip": "IP",
+  "table-column-last-seen": "Ultimo accesso",
   "table-column-current": "Corrente",
   "table-column-description": "Descrizione",
   "table-column-email": "Email",
