Variable statistics period

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -255,10 +255,18 @@
   "messages": "Messages",
   "metadata-url": "Metadata URL",
   "metadata-xml": "Metadata XML",
-  "monthly-usage": "Monthly Usage",
+  "monthly-usage": "Usage",
   "model": "Model",
   "modified": "Modified",
   "most-active-users": "Most active users",
+  "period": "Period",
+  "last-week": "Last week",
+  "last-month": "Last month",
+  "last-year": "Last year",
+  "custom": "Custom",
+  "from": "From",
+  "to": "To",
+  "usage": "Usage",
   "my-assistants": "My assistants",
   "my-profile": "My profile",
   "name": "Name",
