--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -256,10 +256,18 @@
   "messages": "Messaggi",
   "metadata-url": "URL Metadata",
   "metadata-xml": "Metadata XML",
-  "monthly-usage": "Utilizzo Mensile",
+  "monthly-usage": "Utilizzo",
   "model": "Modello",
   "modified": "Modificato",
   "most-active-users": "Utenti più attivi",
+  "period": "Periodo",
+  "last-week": "Ultima settimana",
+  "last-month": "Ultimo mese",
+  "last-year": "Ultimo anno",
+  "custom": "Personalizzato",
+  "from": "Da",
+  "to": "A",
+  "usage": "Utilizzo",
   "my-assistants": "I miei assistenti",
   "my-profile": "Il mio profilo",
   "name": "Nome",
