Selectable analytics range

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -69,6 +69,7 @@
   "bearer_token": "Bearer token",
   "buy-now": "Buy now",
   "cancel": "Cancel",
+  "apply": "Apply",
   "cant_create_assistant_if_no_backend": "Can't create an assistant if no backend is defined",
   "capabilities": "Capabilities",
   "change_owner": "Change owner",
@@ -263,7 +264,13 @@
   "last-week": "Last week",
   "last-month": "Last month",
   "last-year": "Last year",
+  "this-year": "This year",
+  "last-7-days": "Last 7 days",
+  "last-30-days": "Last 30 days",
+  "this-month": "This month",
   "custom": "Custom",
+  "custom-range": "Custom Range",
+  "last-12-months": "Last 12 months",
   "from": "From",
   "to": "To",
   "usage": "Usage",
