--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -69,6 +69,7 @@
   "bearer_token": "Bearer token",
   "buy-now": "Acquista ora",
   "cancel": "Annulla",
+  "apply": "Applica",
   "cant_create_assistant_if_no_backend": "Non è possibile creare un assistente se non è definito un backend",
   "capabilities": "Funzionalità",
   "change_owner": "Cambia proprietario",
@@ -264,7 +265,13 @@
   "last-week": "Ultima settimana",
   "last-month": "Ultimo mese",
   "last-year": "Ultimo anno",
+  "this-year": "Quest'anno",
+  "last-7-days": "Ultimi 7 giorni",
+  "last-30-days": "Ultimi 30 giorni",
+  "this-month": "Questo mese",
   "custom": "Personalizzato",
+  "custom-range": "Intervallo personalizzato",
+  "last-12-months": "Ultimi 12 mesi",
   "from": "Da",
   "to": "A",
   "usage": "Utilizzo",
