Per user analytics

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -21,7 +21,6 @@
   "all-products": "All Products",
   "all-samlconnections": "SSO Connections",
   "all-tools": "Tools",
-  "all-users": "Users",
   "all-workspaces": "Workspaces",
   "allow-only-work-email": "Please use your work email to create an account.",
   "allow-workspace": "Allow workspace members to login using an Identity Provider.",
@@ -271,6 +270,9 @@
   "custom": "Custom",
   "custom-range": "Custom Range",
   "last-12-months": "Last 12 months",
+  "all-users": "All users",
+  "search-users": "Search users...",
+  "no_users_found": "No users found",
   "from": "From",
   "to": "To",
   "usage": "Usage",
