--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -21,7 +21,6 @@
   "all-products": "Tutti i Prodotti",
   "all-samlconnections": "Connessioni SSO",
   "all-tools": "Tools",
-  "all-users": "Utenti",
   "all-workspaces": "Workspace",
   "allow-only-work-email": "Per favore usa la tua email aziendale per creare un account.",
   "allow-workspace": "Consenti ai membri del workspace di accedere utilizzando un Identity Provider.",
@@ -272,6 +271,9 @@
   "custom": "Personalizzato",
   "custom-range": "Intervallo personalizzato",
   "last-12-months": "Ultimi 12 mesi",
+  "all-users": "Tutti gli utenti",
+  "search-users": "Cerca utenti...",
+  "no_users_found": "Nessun utente trovato",
   "from": "Da",
   "to": "A",
   "usage": "Utilizzo",
