Feat: improve analytics page (#719)

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -21,7 +21,6 @@
   "all-products": "All Products",
   "all-samlconnections": "SSO Connections",
   "all-tools": "Tools",
-  "all-users": "Users",
   "all-workspaces": "Workspaces",
   "allow-only-work-email": "Please use your work email to create an account.",
   "allow-workspace": "Allow workspace members to login using an Identity Provider.",
@@ -69,6 +68,7 @@
   "bearer_token": "Bearer token",
   "buy-now": "Buy now",
   "cancel": "Cancel",
+  "apply": "Apply",
   "cant_create_assistant_if_no_backend": "Can't create an assistant if no backend is defined",
   "capabilities": "Capabilities",
   "change_owner": "Change owner",
@@ -255,10 +255,27 @@
   "messages": "Messages",
   "metadata-url": "Metadata URL",
   "metadata-xml": "Metadata XML",
-  "monthly-usage": "Monthly Usage",
+  "monthly-usage": "Usage",
   "model": "Model",
   "modified": "Modified",
   "most-active-users": "Most active users",
+  "period": "Period",
+  "last-week": "Last week",
+  "last-month": "Last month",
+  "last-year": "Last year",
+  "this-year": "This year",
+  "last-7-days": "Last 7 days",
+  "last-30-days": "Last 30 days",
+  "this-month": "This month",
+  "custom": "Custom",
+  "custom-range": "Custom Range",
+  "last-12-months": "Last 12 months",
+  "all-users": "All users",
+  "search-users": "Search users...",
+  "no_users_found": "No users found",
+  "from": "From",
+  "to": "To",
+  "usage": "Usage",
   "my-assistants": "My assistants",
   "my-profile": "My profile",
   "name": "Name",
