--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -21,7 +21,6 @@
   "all-products": "Tutti i Prodotti",
   "all-samlconnections": "Connessioni SSO",
   "all-tools": "Tools",
-  "all-users": "Utenti",
   "all-workspaces": "Workspace",
   "allow-only-work-email": "Per favore usa la tua email aziendale per creare un account.",
   "allow-workspace": "Consenti ai membri del workspace di accedere utilizzando un Identity Provider.",
@@ -69,6 +68,7 @@
   "bearer_token": "Bearer token",
   "buy-now": "Acquista ora",
   "cancel": "Annulla",
+  "apply": "Applica",
   "cant_create_assistant_if_no_backend": "Non è possibile creare un assistente se non è definito un backend",
   "capabilities": "Funzionalità",
   "change_owner": "Cambia proprietario",
@@ -256,10 +256,27 @@
   "messages": "Messaggi",
   "metadata-url": "URL Metadata",
   "metadata-xml": "Metadata XML",
-  "monthly-usage": "Utilizzo Mensile",
+  "monthly-usage": "Utilizzo",
   "model": "Modello",
   "modified": "Modificato",
   "most-active-users": "Utenti più attivi",
+  "period": "Periodo",
+  "last-week": "Ultima settimana",
+  "last-month": "Ultimo mese",
+  "last-year": "Ultimo anno",
+  "this-year": "Quest'anno",
+  "last-7-days": "Ultimi 7 giorni",
+  "last-30-days": "Ultimi 30 giorni",
+  "this-month": "Questo mese",
+  "custom": "Personalizzato",
+  "custom-range": "Intervallo personalizzato",
+  "last-12-months": "Ultimi 12 mesi",
+  "all-users": "Tutti gli utenti",
+  "search-users": "Cerca utenti...",
+  "no_users_found": "Nessun utente trovato",
+  "from": "Da",
+  "to": "A",
+  "usage": "Utilizzo",
   "my-assistants": "I miei assistenti",
   "my-profile": "Il mio profilo",
   "name": "Nome",
