Removed orphan keys

--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -178,7 +178,6 @@
   "directory-sync": "Sincronizzazione Directory",
   "directory-sync-message": "Il provider di sincronizzazione directory ti chiederà le seguenti informazioni per configurare la tua app SCIM.",
   "directory-sync-provider": "Provider di Sincronizzazione Directory",
-  "disable_password_login": "Disable password login",
   "discovery-url": "URL di Scoperta",
   "do_you_want_to_recover_an_unsaved_version": "Vuoi recuperare una versione non salvata?",
   "dont-have-an-account": "Non hai un account?",
@@ -307,6 +306,7 @@
   "only-me": "Solo io",
   "only_you_will_have_access_to_this_assistant": "Solo tu avrai accesso a questo assistente",
   "only_you_will_have_access_to_this_tool": "Solo tu potrai aggiungere questo tool ad un assistente",
+  "openai_backend": "OpenAI",
   "openapi_spec": "Specifica OpenAPI",
   "options": "Opzioni",
   "or-sign-in-with": "Oppure Accedi Con",
